# nrf51-ble-demo

./: Cargo.toml  USAGE.md  openocd.cfg
.cargo/: config
examples/: ble-hal.rs
src/: lib.rs  radio.rs
src/ble/: mod.rs
src/ble/link/: ad_structure.rs  advertising.rs  mod.rs
