[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
categories = ["embedded", "no-std"]
description = "nRF51 BLE demo"
keywords = ["arm", "cortex-m", "template"]
license = "CC-0"
name = "nrf51-ble-demo"
version = "0.1.0"
edition = "2018"

[dependencies]
nrf51 = "0.5"
byteorder = { version = "1.2", default-features = false }
nb = "0.1"
fpa = "0.1"

[dev-dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
nrf51-hal = "0.5"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
